.apex/unpackaged/objects/Customer__c.object
<CustomObject>
    <fields>
        <fullName>Address_Field__c</fullName>
        <label>Address Field</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Total__c</fullName>
        <formula>(Amount__c / Check_Price__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Currency Desc</description>
        <inlineHelpText>input valid currency</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Check_Price__c</fullName>
        <label>Check Price</label>
        <summarizedField>NewContract__c.Price__c</summarizedField>
        <summaryForeignKey>NewContract__c.Customer__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AUSTRALIA</fullName>
                    <default>true</default>
                    <label>AUSTRALIA</label>
                </value>
                <value>
                    <fullName>GERMANY</fullName>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cust_ID__c</fullName>
        <displayFormat>Cust-{00000}</displayFormat>
        <externalId>true</externalId>
        <label>Cust ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Customer_Condition__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Customer Condition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Desc__c</fullName>
        <label>Customer Desc</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <externalId>true</externalId>
        <label>Customer Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_Interests__c</fullName>
        <label>Customer Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Badminton</fullName>
                </value>
                <value>
                    <fullName>Baseball</fullName>
                </value>
                <value>
                    <fullName>Cricket</fullName>
                </value>
                <value>
                    <fullName>Football</fullName>
                </value>
                <value>
                    <fullName>Soccer</fullName>
                </value>
                <value>
                    <fullName>Swimming</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Percentage__c</fullName>
        <label>Customer Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_SSN__c</fullName>
        <label>Customer SSN</label>
        <length>16</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Customer_Website__c</fullName>
        <label>Customer Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DOB_Time__c</fullName>
        <label>DOB Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateCalculate__c</fullName>
        <formula>IF( NOT( ISBLANK( DOB__c ) ) ,
  IF( DATE( 2000 , MONTH( DOB__c ) , DAY( DOB__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( DOB__c ),
     YEAR (Today()) - YEAR ( DOB__c ) -1 ),
  null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateCalculate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocuSign_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocuSign Status</label>
        <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duplicate_Sum__c</fullName>
        <label>Duplicate Sum</label>
        <summarizedField>NewContract__c.Price__c</summarizedField>
        <summaryForeignKey>NewContract__c.Customer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>INDIA_AC__c</fullName>
        <label>INDIA AC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INDIA_Pan_Card__c</fullName>
        <label>INDIA Pan Card</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ifcondition__c</fullName>
        <formula>if(or((or(Amount__c &gt;150000 , Phone__c == &apos;(312) 647-8704&apos;)),Cust_ID__c == &apos;Cust-01004&apos;), &apos;Super Customer&apos;,
if( Amount__c &gt; 90000, &apos;OKOK  Customer&apos;,
if(and(Amount__c &gt; 50000 , Amount__c &lt; 60000) , &apos;Good  Customer&apos;, &apos;Bad Customer&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ifcondition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAPAN_SSN__c</fullName>
        <label>JAPAN SSN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JPN_DL__c</fullName>
        <label>JPN DL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Price__c</fullName>
        <label>Max Price</label>
        <summarizedField>NewContract__c.Price__c</summarizedField>
        <summaryForeignKey>NewContract__c.Customer__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Price_Min__c</fullName>
        <label>Price Min</label>
        <summarizedField>NewContract__c.Price__c</summarizedField>
        <summaryForeignKey>NewContract__c.Customer__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Count__c</fullName>
        <label>Total Count</label>
        <summaryForeignKey>NewContract__c.Customer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <summarizedField>NewContract__c.Price__c</summarizedField>
        <summaryForeignKey>NewContract__c.Customer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UK_DL__c</fullName>
        <label>UK DL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UK_SSN__c</fullName>
        <label>UK SSN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_DL__c</fullName>
        <label>USA DL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_SSN__c</fullName>
        <label>USA SSN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfsd__c</fullName>
        <formula>Total_Count__c +  Max_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>dasd</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Customer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>newqueue_Customer</fullName>
        <filterScope>Queue</filterScope>
        <label>new queue</label>
        <queue>newqueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <recordTypes>
        <fullName>INDIA_Record_Type</fullName>
        <active>true</active>
        <label>INDIA Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>JAPAN_Record_Type</fullName>
        <active>true</active>
        <label>JAPAN Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>UK_Record_Type</fullName>
        <active>true</active>
        <label>UK Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>US_Record_Type</fullName>
        <active>true</active>
        <label>US Record Type</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Prior_Validation_Rules</fullName>
        <active>true</active>
        <errorConditionFormula>Priorvalue(Amount__c) &gt;100000</errorConditionFormula>
        <errorMessage>Amount is greater than 100K</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_Rules</fullName>
        <active>true</active>
        <errorConditionFormula>!REGEX(Phone__c,&quot;^((\\+1)?\\s?\\(\\d{3}\\)\\s?\\d{3}\\-\\d{4})?$&quot;)</errorConditionFormula>
        <errorMessage>mobile num</errorMessage>
    </validationRules>
</CustomObject>